# gtkworkshop

./: COPYING  README  meson.build  org.gnome.Gtkworkshop.json
data/: meson.build  org.gnome.Gtkworkshop.appdata.xml.in  org.gnome.Gtkworkshop.desktop.in  org.gnome.Gtkworkshop.gschema.xml
po/: POTFILES  meson.build
src/: MyWindow.py  gtkworkshop.in  lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson6.py  lesson7.py  main.py  meson.build
src/project/: MyButtons.py  MyFileChooser.py  MyHeaderBar.py  MyMainBox.py  project.py
